[package]
name = "testplay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = "0.10.2"
webtransport-quinn ={ git = "https://github.com/kelvinkirima014/webtransport-rs.git" }
webtransport-proto ={ git = "https://github.com/kelvinkirima014/webtransport-rs.git" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
anyhow = "1.0.75"
tracing = "0.1.40"
tokio = { version = "1.33.0", features = ["full"] }
rustls-pemfile = "1.0.4"
rustls = { version = "0.21", features = ["dangerous_configuration", "quic"] }
clap = { version = "4.4.8", features = ["derive"] }
rcgen = "0.11.3"
url = "2.4.1"
env_logger = "0.10.1"
log = "0.4.20"
bytes = "1.5.0"
